--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-test 0
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Mi primera página web</title>
+</head>
+<body>
+    <h1>Hola, mundo!</h1>
+    <p>Esta es mi primera página web.</p>
+</body>
+</html>
